# reshade

examples/: Examples.sln
examples/01-framerate_limit/: CMakeLists.txt  framerate_limit.vcxproj  framerate_limit_addon.cpp  main.cpp  run.sh
examples/01-framerate_limit copy/: .gitignore  CMakeLists.txt  calc.py  framerate_limit_copy.vcxproj  main.cpp  negative_filter.cpp
examples/01-framerate_limit copy/gcc/: CMakeLists.txt
examples/01-framerate_limit copy/msvc/: CMakeLists.txt  README.md  calc.py  main.cpp  test.ipynb
examples/01-framerate_limit copy/python_grpc/: image_client.py  image_server.py  image_service.proto  image_service_pb2.py
examples/01-framerate_limit_copy/: .gitignore  negative_filter.cpp  start_server.ps1
examples/01-framerate_limit_copy/cpp_grpc/: image_service.proto  send_bytes.cpp
examples/01-framerate_limit_copy/gcc/: README.md  main.cpp
examples/01-framerate_limit_copy/msvc/: main.cpp  test.ipynb
examples/01-framerate_limit_copy/python_cpp_shared/: README.md  consumer.cpp  producer.py  undo.py
examples/01-framerate_limit_copy/python_cpp_shared/combined/: README.md  client.cpp  server.py
examples/01-framerate_limit_copy/python_cpp_shared/repeat/: README.md  client.cpp  server.py
examples/01-framerate_limit_copy/python_grpc/: README.md  image_client.py  image_server.py  image_service_pb2_grpc.py
examples/01-framerate_limit_copy/python_socket/: client.py  server.py
examples/01-framerate_limit_copy/reshade_diffusion/: CMakeLists.txt  README.md  main.cpp  server.py
examples/01-framerate_limit_copy/reshade_shared_mem/: CMakeLists.txt  main.cpp  server.py  test.ipynb
examples/01-framerate_limit_copy/shared_example/: shared_memory_example.cpp
include/: reshade_api_resource.hpp
